WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188621
Can't share an app on AppStore to WeChat due to a release assert
https://bugs.webkit.org/show_bug.cgi?id=188621
Summary
Can't share an app on AppStore to WeChat due to a release assert
Ryosuke Niwa
Reported
2018-08-15 14:28:59 PDT
The assertion we added in
https://trac.webkit.org/r233808
is firing for WeChat’s share extension. We need to add a linked-on-or-after check: ASSERT(RunLoop::isMain() || /* linked before iOS 12 */). <
rdar://problem/43343976
>
Attachments
Supresses the release assert
(10.14 KB, patch)
2018-08-15 16:09 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixed GTK build
(10.07 KB, patch)
2018-08-15 16:19 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-08-15 16:09:55 PDT
Created
attachment 347219
[details]
Supresses the release assert
Ryosuke Niwa
Comment 2
2018-08-15 16:10:19 PDT
Comment on
attachment 347219
[details]
Supresses the release assert The patch has already been reviewed by ggaren in person. Just waiting for EWS to land.
Ryosuke Niwa
Comment 3
2018-08-15 16:19:01 PDT
Created
attachment 347220
[details]
Fixed GTK build
Ryosuke Niwa
Comment 4
2018-08-15 16:37:33 PDT
Comment on
attachment 347220
[details]
Fixed GTK build Clearing flags on attachment: 347220 Committed
r234905
: <
https://trac.webkit.org/changeset/234905
>
Ryosuke Niwa
Comment 5
2018-08-15 16:37:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug